stderr
JudgeMan.java:61: error: cannot find symbol
        List<Integer> isPaired = new intArray<Integer>();
                                     ^
  symbol:   class intArray
  location: class JudgeMan
1 error
